--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+
+    <body style="background-color:#ffe6e6">
+      <div id = "menu" align = "middle" >
+         <a href = "/index.html">HOME</a> |
+         <a href = "/about/contact_us.htm">CONTACT</a>
+      </div>
+
+      <div id = "content" align = "left" >
+        <h1 style = "font-family:arial;">Hello World</h1>
+        <p style = "font-family:georgia;">I'm hosted with GitHub Pages.</p>
+      </div>
+    </body>
 </html>
