--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
     <body style="background-color:#ffe6e6">
       <div id = "menu" align = "middle" >
-         <a href = "/index.html">HOME</a> |
-         <a href = "/about/contact_us.htm">CONTACT</a>
+         <a href = "/index.html">HOME" style = "font-family:georgia</a> |
+         <a href = "/about/contact_us.htm">CONTACT" style = "font-family:georgia</a>
       </div>
 
       <div id = "content" align = "left" >
-        <h1 style = "font-family:arial;">Hello World</h1>
+        <h1 style = "font-family:georgia;">Hello World</h1>
         <p style = "font-family:georgia;">I'm hosted with GitHub Pages.</p>
       </div>
     </body>
