--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
     <body style="background-color:#ffe6e6">
       <div id = "menu" align = "middle" >
-         <a href = "/index.html">HOME" style = "font-family:georgia</a> |
-         <a href = "/about/contact_us.htm">CONTACT" style = "font-family:georgia</a>
+         <a href = "/index.html" style = "font-family:georgia">HOME</a> |
+         <a href = "/about/contact_us.html" style = "font-family:georgia">CONTACT</a>
       </div>
 
       <div id = "content" align = "left" >
