--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
         <h1 style = "font-family:georgia;">Hello World</h1>
         <p style = "font-family:georgia;">I'm hosted with GitHub Pages.</p>
       </div>
+
+      <div id = "content" align = "right" >
+        <iframe src="/frontpageplot.html" width="100%" height="100%" style="border:none;">
+        </iframe>
     </body>
 </html>
