--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
 
       <div id = "content" align = "right" >
-        <iframe src="/frontpageplot.html" width="100%" height="100%" style="border:none;">
+        <iframe src="/frontpageplot.html" width="100%" height="300" style="border:none;">
         </iframe>
     </body>
 </html>
