--- a/frontpageplot.html
+++ b/frontpageplot.html
@@ -12,7 +12,7 @@
             width: 1200;
             height: 700;
             background-color: #ffffff;
-            opacity: 0;
+            opacity: .4;
             border: 1px solid lightgray;
             position: relative;
             float: left;
@@ -25,7 +25,7 @@
             left:0px;
             width: 1200;
             height: 700;
-            background-color:rgba(200,200,200,0);
+            background-color:rgba(200,200,200,0.8);
             -webkit-transition: all 0.5s ease;
             -moz-transition: all 0.5s ease;
             -ms-transition: all 0.5s ease;
@@ -54,7 +54,7 @@
             width:500px;
             height:23px;
             margin:auto auto auto auto;
-            box-shadow: 0px 0px 4px rgba(0,0,0,0);
+            box-shadow: 0px 0px 4px rgba(0,0,0,0.2);
             border-radius:10px;
         }
 
@@ -75,17 +75,17 @@
             width:600px;
             height:44px;
             margin:auto auto auto auto;
-            border:8px solid rgba(0,0,0,0);
+            border:8px solid rgba(0,0,0,0.1);
             background: rgb(252,252,252); /* Old browsers */
             background: -moz-linear-gradient(top,  rgba(252,252,252,1) 0%, rgba(237,237,237,1) 100%); /* FF3.6+ */
-            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(252,252,252,0)), color-stop(100%,rgba(237,237,237,0))); /* Chrome,Safari4+ */
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(252,252,252,1)), color-stop(100%,rgba(237,237,237,1))); /* Chrome,Safari4+ */
             background: -webkit-linear-gradient(top,  rgba(252,252,252,1) 0%,rgba(237,237,237,1) 100%); /* Chrome10+,Safari5.1+ */
             background: -o-linear-gradient(top,  rgba(252,252,252,1) 0%,rgba(237,237,237,1) 100%); /* Opera 11.10+ */
             background: -ms-linear-gradient(top,  rgba(252,252,252,1) 0%,rgba(237,237,237,1) 100%); /* IE10+ */
             background: linear-gradient(to bottom,  rgba(252,252,252,1) 0%,rgba(237,237,237,1) 100%); /* W3C */
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfcfc', endColorstr='#ededed',GradientType=0 ); /* IE6-9 */
             border-radius:72px;
-            box-shadow: 0px 0px 10px rgba(0,0,0,0);
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
         }
 
 
