--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
     <body style="background-color:#ffe6e6">
       <div id = "menu" align = "middle" >
-         <a href = "/index.html" style = "font-family:georgia">HOME</a> |
-         <a href = "/about/contact_us.html" style = "font-family:georgia">CONTACT</a>
+         <a href = "/index.html" style = "font-family:Big Caslon">HOME</a> |
+         <a href = "/contact.html" style = "font-family:Big Caslon">CONTACT</a>
       </div>
 
       <div id = "content" align = "left" >
-        <h1 style = "font-family:georgia;">Hello World</h1>
-        <p style = "font-family:georgia;">I'm hosted with GitHub Pages.</p>
+        <h1 style = "font-family:Big Caslon;">Hello World</h1>
+        <p style = "font-family:Big Caslon;">I'm hosted with GitHub Pages.</p>
       </div>
 
       <div id = "content" align = "right" >
-        <iframe src="/frontpageplot.html" width="100%" height="300" style="border:none;">
+        <iframe src="/frontpageplot.html" width="50%" height="200" style="border:none;">
         </iframe>
     </body>
 </html>
