--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,13 @@
       <div id = "content" align = "middle" >
         <h1 style = "font-family:Big Caslon;">Send me an e-mail!</h1>
       </div>
-      <form action="mailto:someone@example.com" method="post" enctype="text/plain" style = "font-family:Big Caslon>
+      <form action="mailto:someone@example.com" method="post" enctype="text/plain" style = "font-family:Big Caslon><br>
       Name:<br>
       <input type="text" name="name"><br>
       E-mail:<br>
       <input type="text" name="mail"><br>
-      Comment:<br>
-      <input type="text" name="comment" size="50"><br><br>
+      Message:<br>
+      <input type="text" name="message" size="100"><br><br>
       <input type="submit" value="Send">
       <input type="reset" value="Reset">
       </form>
