--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       </div>
 
       <div id = "content" align = "left" >
-        <h1 style = "font-family:Big Caslon;">Hello World</h1>
-        <p style = "font-family:Big Caslon;">I'm hosted with GitHub Pages.</p>
+        <h1 style = "font-family:Big Caslon; margin-left: 50px">Hello World</h1>
+        <p style = "font-family:Big Caslon; margin-left: 50px">I'm hosted with GitHub Pages.</p>
       </div>
 
       <div id = "content" align = "right" >
-        <iframe src="/frontpageplot.html" width="50%" height="200" style="border:none;">
+        <iframe src="/frontpageplot.html" width="300" height="300" style="border:none;">
         </iframe>
     </body>
 </html>
