--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       <div id = "content" align = "middle" >
         <h1 style = "font-family:Big Caslon;">Send me an e-mail!</h1>
       </div>
-      <form action="mailto:someone@example.com" method="post" enctype="text/plain" style = "font-family:Big Caslon><br>
+      <form action="mailto:someone@example.com" method="post" enctype="text/plain" style = "font-family:Big Caslon"; margin-left: 200px><br>
       Name:<br>
       <input type="text" name="name"><br>
       E-mail:<br>
