--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       E-mail:<br>
       <input type="text" name="mail"><br>
       Message:<br>
-      <input type="text" name="message" size="100"><br><br>
+      <input type="text" name="message" size="30" style="height:200px"><br><br>
       <input type="submit" value="Send">
       <input type="reset" value="Reset">
       </form>
