--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
          <a href = "/contact.html" style = "font-family:Big Caslon">CONTACT</a>
       </div>
 
-      <hr style="height:5px;border-width:0;color:#00ccff;background-color:#00ccff">
-
       <div id = "content" align = "left" >
-        <h1 style = "font-family:Big Caslon; margin-left: 150">Hello World</h1>
-        <p style = "font-family:Big Caslon; margin-left: 150px">I'm hosted with GitHub Pages.</p>
+        <h1 style = "font-family:Big Caslon; margin-left: 100px">Hello World</h1>
+        <p style = "font-family:Big Caslon; margin-left: 1px">I'm hosted with GitHub Pages.</p>
       </div>
 
       <div id = "content" align = "right" >
-        <iframe src="/frontpageplot.html" width="500" height="500" style="border:none;">
+        <iframe src="/frontpageplot.html" style="border:none;">
         </iframe>
     </body>
 </html>
