--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,13 @@
       <div id = "content" align = "middle" >
         <h1 style = "font-family:Big Caslon;">Send me an e-mail!</h1>
       </div>
-      <form action="mailto:someone@example.com" method="post" enctype="text/plain" style = "font-family:Big Caslon"; margin-left: 200px><br>
+      <form action="mailto:someone@example.com" method="post" enctype="text/plain" style = "font-family:Big Caslon" align = "middle"><br>
       Name:<br>
-      <input type="text" name="name"><br>
+      <input type="text" name="name" size="40"><br>
       E-mail:<br>
-      <input type="text" name="mail"><br>
+      <input type="text" name="mail" size="40"><br>
       Message:<br>
-      <input type="text" name="message" size="30" style="height:200px"><br><br>
+      <input type="text" name="message" size="40" style="height:150"><br><br>
       <input type="submit" value="Send">
       <input type="reset" value="Reset">
       </form>
