--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <div id = "content" align = "left" >
         <h1 style = "font-family:Big Caslon; margin-left: 100px">Hello World</h1>
         <p style = "font-family:Big Caslon; margin-left: 100px">I'm hosted with GitHub Pages.</p>
+        <a href = "/bachelor.html" style = "font-family:Big Caslon">Cool networks here!</a>
       </div>
 
       <div id = "content" align = "right" >
