--- a/bachelor.html
+++ b/bachelor.html
@@ -12,11 +12,11 @@
         <p style = "font-family:Big Caslon; margin-left: 100px">Cool networks here:</p>
       </div>
 
-      <h2>Randers</h2>
-        <img src="randers.png" alt="randers" width="500" height="500">
+      <h2 style = "font-family:Big Caslon; margin-left: 100px">Randers</h2>
+        <img src="randers.png" alt="randers" width="500" height="500" style = "margin-left: 100px">
 
-      <h2>Albertslund</h2>
-        <img src="albertslund.png" alt="albertslund" width="500" height="500">
+      <h2 style = "font-family:Big Caslon; margin-left: 100px">Albertslund</h2>
+        <img src="albertslund.png" alt="albertslund" width="500" height="500" style = "margin-left: 100px">
 
     </body>
 </html>
