--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+  #top_of_page{
+    background-color: #ffe6e6;
+    font-family:Avenir
 
+  }
+  #heading{
+    background-color: #ffe6e6;
+    font-family:Big Caslon;
+    margin-left: 100px;
+    color:blue;
+    font-size:50px
+  }
+  #content{
+    font-family:Big Caslon;
+    margin-left: 200px
+  }
+</style>
     <body style="background-color:#ffe6e6">
-      <div id = "menu" align = "middle" >
-         <a href = "/index.html" style = "font-family:Big Caslon">HOME</a> |
-         <a href = "/about/contact_us.html" style = "font-family:Big Caslon">CONTACT</a>
+      <div id = "top_of_page" align = "middle" >
+         <a href = "/index.html">Home</a> |
+         <a href = "/contact.html">Contact</a>
       </div>
 
       <div id = "content" align = "middle" >
-        <h1 style = "font-family:Big Caslon;">Send me an e-mail!</h1>
+        <h1>Send me an e-mail!</h1>
       </div>
-      <form action="mailto:someone@example.com" method="post" enctype="text/plain" style = "font-family:Big Caslon" align = "middle"><br>
+      <form action="mailto:someone@example.com" method="post" enctype="text/plain" align = "middle"><br>
       Name:<br>
       <input type="text" name="name" size="40"><br>
       E-mail:<br>
