--- a/bachelor.html
+++ b/bachelor.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+  #top_of_page{
+    background-color: #ffe6e6;
+    font-family:Avenir
 
-    <body style="background-color:#ffe6e6">
-      <div id = "menu" align = "middle" >
-         <a href = "/index.html" style = "font-family:Big Caslon">HOME</a> |
-         <a href = "/contact.html" style = "font-family:Big Caslon">CONTACT</a>
+  }
+  #heading{
+    background-color: #ffe6e6;
+    font-family:Big Caslon;
+    margin-left: 100px;
+    color:blue;
+    font-size:50px
+  }
+  #content{
+    font-family:Big Caslon;
+    margin-left: 200px
+  }
+</style>
+</head>
+    <body>
+      <div id = "top_of_page" align = "middle" >
+         <a href = "/index.html">Home</a> |
+         <a href = "/contact.html">Contact</a>
       </div>
 
-      <div id = "content" align = "left" >
-        <h1 style = "font-family:Big Caslon; margin-left: 100px">Networks</h1>
-        <p style = "font-family:Big Caslon; margin-left: 100px">Cool networks here:</p>
+      <div id = "heading" align = "left" >
+        <h1>Networks</h1>
       </div>
 
+      <div id = "content" align = left>
+        <p>Cool networks here:</p>
       <h2 style = "font-family:Big Caslon; margin-left: 100px">Randers</h2>
         <img src="randers.png" alt="randers" width="500" height="500" style = "margin-left: 100px">
-
-      <h2 style = "font-family:Big Caslon; margin-left: 100px">Albertslund</h2>
-        <img src="albertslund.png" alt="albertslund" width="500" height="500" style = "margin-left: 100px">
+      <h2">Albertslund</h2>
+        <img src="albertslund.png" alt="albertslund" width="500" height="500">
+      </div>
 
     </body>
 </html>
