--- a/index.html
+++ b/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+  #top_of_page{
+    background-color: #ffe6e6;
+    font-family:Avenir
 
-    <body style="background-color:#ffe6e6">
-      <div id = "menu" align = "middle" >
-         <a href = "/index.html" style = "font-family:Big Caslon">HOME</a> |
-         <a href = "/contact.html" style = "font-family:Big Caslon">CONTACT</a>
+  }
+  #heading{
+    background-color: #ffe6e6;
+    font-family:Big Caslon;
+    margin-left: 100px;
+    color:blue;
+    font-size:50px
+  }
+  #content{
+    font-family:Big Caslon;
+    margin-left: 200px
+  }
+</style>
+</head>
+<body>
+      <div id = "top_of_page" align = "right" >
+         <a href = "/index.html">Home</a> |
+         <a href = "/contact.html">Contact</a>
       </div>
 
-      <div id = "content" align = "left" >
-        <h1 style = "font-family:Big Caslon; margin-left: 100px">Hello World</h1>
-        <p style = "font-family:Big Caslon; margin-left: 100px">I'm hosted with GitHub Pages.</p>
-        <a href = "/bachelor.html" style = "font-family:Big Caslon; margin-left: 100px">Cool networks here!</a>
+      <div id = "heading" align = "left" >
+        <h1>Hello World</h1>
       </div>
 
-      <div id = "content" align = "middle" >
-        <iframe src="/frontpageplot.html" style="border:none;">
+      <div id="content" align="left">
+        <p>I'm hosted with GitHub Pages.</p>
+        <a href = "/bachelor.html">Cool networks here!</a>
+      </div>
+
+      <div id = "content" align = "midle" >
+        <iframe src="/frontpageplot.html" style="border:none" width="600" height="600">
         </iframe>
-    </body>
+</body>
 </html>
