--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
 <style>
   #top_of_page{
     background-color: #ffe6e6;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    right: 0;
+    z-index: -1;
     font-family:Avenir
-
   }
   #heading{
     background-color: #ffe6e6;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    right: 0;
+    z-index: -1;
     font-family:Big Caslon;
     margin-left: 100px;
     color:blue;
