--- a/index.html
+++ b/index.html
@@ -4,22 +4,10 @@
 <style>
   #top_of_page{
     background-color: #ffe6e6;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    right: 0;
-    z-index: -1;
     font-family:Avenir
   }
   #heading{
     background-color: #ffe6e6;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    right: 0;
-    z-index: -1;
     font-family:Big Caslon;
     margin-left: 100px;
     color:blue;
@@ -32,13 +20,10 @@
 </style>
 </head>
 <body>
-      <div id = "top_of_page" align = "right" >
-         <a href = "/index.html">Home</a> |
-         <a href = "/contact.html">Contact</a>
-      </div>
-
-      <div id = "heading" align = "left" >
-        <h1>Hello World</h1>
+      <div id = "top_of_page">
+         <a href = "/index.html" align = "right">Home</a> |
+         <a href = "/contact.html" align = "right">Contact</a>
+        <h1 align = "left" style = "font-family:Big Caslon; margin-left: 100px; color:blue; font-size:50px">Hello World</h1>
       </div>
 
       <div id="content" align="left">
