--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <style>
   #top_of_page{
     background-color: #ffe6e6;
+    width: 100%;
+    position: fixed;
     font-family:Avenir
   }
   #heading{
     background-color: #ffe6e6;
+    width: 100%;
+    position: fixed;
     font-family:Big Caslon;
     margin-left: 100px;
     color:blue;
@@ -23,7 +27,10 @@
       <div id = "top_of_page">
          <a href = "/index.html" align = "right">Home</a> |
          <a href = "/contact.html" align = "right">Contact</a>
-        <h1 align = "left" style = "font-family:Big Caslon; margin-left: 100px; color:blue; font-size:50px">Hello World</h1>
+      </div>
+
+      <div id = "heading">
+        <h1 align = "left">Hello World</h1>
       </div>
 
       <div id="content" align="left">
