--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
 <head>
 <style>
   #top_of_page{
-    background-color: #ffe6e6;
-    width: 100%;
-    position: fixed;
     font-family:Avenir
   }
   #heading{
-    background-color: #ffe6e6;
-    width: 100%;
-    position: fixed;
     font-family:Big Caslon;
     margin-left: 100px;
     color:blue;
@@ -19,14 +13,15 @@
   }
   #content{
     font-family:Big Caslon;
-    margin-left: 200px
+    margin-left: 200px;
+    background-color: white
   }
 </style>
 </head>
-<body>
-      <div id = "top_of_page">
-         <a href = "/index.html" align = "right">Home</a> |
-         <a href = "/contact.html" align = "right">Contact</a>
+<body style = "background-color: #ffe6e6">
+      <div id = "top_of_page" align = "right">
+         <a href = "/index.html">Home</a> |
+         <a href = "/contact.html">Contact</a>
       </div>
 
       <div id = "heading">
