--- a/bachelor.html
+++ b/bachelor.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-  #top_of_page{
-    background-color: #ffe6e6;
-    font-family:Avenir
-
-  }
-  #heading{
-    background-color: #ffe6e6;
-    font-family:Big Caslon;
-    margin-left: 100px;
-    color:blue;
-    font-size:50px
-  }
-  #content{
-    font-family:Big Caslon;
-    margin-left: 200px
-  }
-</style>
+  <style>
+    #top_of_page{
+      font-family:Avenir
+    }
+    #heading{
+      font-family:Big Caslon;
+      margin-left: 100px;
+      color:blue;
+      font-size:50px
+    }
+    #content{
+      font-family:Big Caslon;
+      margin-left: 200px;
+      background-color: white
+    }
+  </style>
 </head>
-    <body>
-      <div id = "top_of_page" align = "middle" >
+<body style = "background-color: #ffe6e6">
+      <div id = "top_of_page" align = "right" >
          <a href = "/index.html">Home</a> |
          <a href = "/contact.html">Contact</a>
       </div>
