--- a/bachelor.html
+++ b/bachelor.html
@@ -14,7 +14,6 @@
     #content{
       font-family:Big Caslon;
       margin-left: 200px;
-      background-color: white
     }
   </style>
 </head>
@@ -29,11 +28,11 @@
       </div>
 
       <div id = "content" align = left>
-        <p>Cool networks here:</p>
-      <h2 style = "font-family:Big Caslon; margin-left: 100px">Randers</h2>
-        <img src="randers.png" alt="randers" width="500" height="500" style = "margin-left: 100px">
-      <h2">Albertslund</h2>
-        <img src="albertslund.png" alt="albertslund" width="500" height="500">
+          <p>Cool networks here:</p>
+          <h2>Randers</h2>
+          <img src="randers.png" alt="randers" width="500" height="500">
+          <h2>Albertslund</h2>
+          <img src="albertslund.png" alt="albertslund" width="500" height="500">
       </div>
 
     </body>
