--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,7 @@
       font-size:50px
     }
     #content{
-      font-family:Big Caslon;
-      margin-left: 200px;
-      background-color: white
+      font-family:Big Caslon
     }
   </style>
 </head>
@@ -24,10 +22,10 @@
          <a href = "/contact.html">Contact</a>
       </div>
 
-      <div id = "content" align = "middle" >
+      <div id = "content" align = "middle">
         <h1>Send me an e-mail!</h1>
       </div>
-      <form action="mailto:someone@example.com" method="post" enctype="text/plain" align = "middle"><br>
+      <form  id = "content" align = "middle" action="mailto:someone@example.com" method="post" enctype="text/plain"><br>
       Name:<br>
       <input type="text" name="name" size="40"><br>
       E-mail:<br>
