--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   }
   #content{
     font-family:Big Caslon;
-    margin-left: 200px;
-    background-color: white
+    margin-left: 200px
   }
 </style>
 </head>
