added multiple pages. Styled inputs and cv page

--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,10 @@
 
     <div id="col content" class="col content">
       <form  id = "content" align = "middle" action="mailto:someone@example.com" method="post" enctype="text/plain"><br>
-        Name:<br>
-        <input type="text" name="name" size="40"><br>
-        E-mail:<br>
-        <input type="text" name="mail" size="40"><br>
+        Your email:<br>
+        <input type="text" name="mail" size="40" placeholder="johnsmith@email.com"><br>
         Message:<br>
-        <input type="text" name="message" size="40" style="height:150"><br><br>
+        <input type="text" name="message" size="40" placeholder="I would like to talk to you about..."><br><br>
       </form>
       <button id = "content_btn">Submit!</button>
     </div>
