--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
   </script>
 </head>
 <body>
+  <div class="background"></div>
 
   <button id="sidebar_btn" onclick="openNav()">&#9776;</button>
 
   <div id="menu_sidepanel" class="sidepanel">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>
     <div style="margin-left: 20%;">
-      <a href="#">About</a>
+      <a href="#">CV</a>
       <a href="#">Subpage</a>
       <a href="/contact.html">Contact</a>
     </div>
