technical skills boxes

--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
   <div id="menu_sidepanel" class="sidepanel">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>
     <div style="margin-left: 20%;">
-      <a href="#">CV</a>
+      <a href="/cv.html">CV</a>
       <a href="#">Subpage</a>
       <a href="/contact.html">Contact</a>
     </div>
@@ -40,26 +40,67 @@
     </div>
 
     <div id="col content" class="col content">
-        <a id="logo_link" href="https://github.com/MadsLang"><img src="images/github_logo.svg" height="40" width="40"></a>
-        <a id="logo_link" href="https://www.linkedin.com/in/mads-lang-s%C3%B8rensen-472504140/"><img src="images/linkedin_logo.png" height="40" width="40"></a>
         <h2>Education</h2>
-        <p>Here goes information about my education</p>
+        <p>Cand.Scient.soc (Master in Sociology), University of Copenhagen, 2023</p>
+        <p>Ba.Scient.soc (Bachelor in Sociology), University of Copenhagen, 2021</p>
         <br>
         <h2>Work Experience</h2>
-        <p>Here goes information about my work experience</p>
+        <ul id="cv_list">
+          <li>Junior Consultant, Damvad Analytics, Jun 2021 - Present</li>
+          <li>Intern, Damvad Analytics, Jan 2021 - Jun 2021</li>
+          <li>Student researcher, VIVE, Feb 2019 - Jan 2021</li>
+        </ul>
         <br>
         <h2>Technical skills</h2>
         <p>
+            <span id="skill_box">
+              <span id="skill_box_name">Python</span>
+              <span id="skill_box_text">Fluent</span>
+            </span>
+            <span id="skill_box">
+              <span id="skill_box_name">R</span>
+              <span id="skill_box_text">Fluent</span>
+            </span>
+            <span id="skill_box">
+              <span id="skill_box_name">SQL</span>
+              <span id="skill_box_text">Basic level</span>
+            </span>
+            <span id="skill_box">
+              <span id="skill_box_name">HTML</span>
+              <span id="skill_box_text">High Level</span>
+            </span>
+            <span id="skill_box">
+              <span id="skill_box_name">CSS</span>
+              <span id="skill_box_text">High Level</span>
+            </span>
             <br>
-            <span id="skill_box">Python</span>
-            <span id="skill_box">R</span>
-            <span id="skill_box">HTML</span>
-            <span id="skill_box">NLP</span>
-            <span id="skill_box">Machine Learning</span>
+            <span id="skill_box">
+              <span id="skill_box_name">Cloud</span>
+              <span id="skill_box_text">AWS, elementary</span>
+            </span>
+            <span id="skill_box">
+              <span id="skill_box_name">Web-scraping</span>
+              <span id="skill_box_text">Scrapy, Selenium and more</span>
+            </span>
+            <span id="skill_box">
+              <span id="skill_box_name">Javascript</span>
+              <span id="skill_box_text">Very beginner</span>
+            </span>
         </p>
+        <h2>Links</h2>
+        <a id="logo_link" href="https://github.com/MadsLang"><img src="images/github_logo.svg" height="40" width="40"></a>
+        <a id="logo_link" href="https://www.linkedin.com/in/mads-lang-s%C3%B8rensen-472504140/"><img src="images/linkedin_logo.png" height="40" width="40"></a>
     </div>
 
+
   </main>
+  <footer>
+    <p>  
+      <br>
+      <br>
+      <br>
+    </p>
+  </footer> 
 
 </body>
 </html>
