--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
   <div id="menu_sidepanel" class="sidepanel">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>
     <div style="margin-left: 20%;">
-      <a href="#">About</a>
+      <a href="/cv.html">CV</a>
       <a href="#">Subpage</a>
       <a href="/contact.html">Contact</a>
     </div>
