added cases page and home

--- a/cases.html
+++ b/cases.html
@@ -19,6 +19,7 @@
   </script>
 </head>
 <body>
+  <div class="background"></div>
 
   <button id="sidebar_btn" onclick="openNav()">&#9776;</button>
 
@@ -32,21 +33,38 @@
     </div>
   </div>
 
+
+
   <main>
     <div id="header">
-      <h1">Send me an e-mail!</h1>
+        <h1">Cases</h1>
     </div>
-
-    <div id="col content" class="col content">
-      <form  id = "content" align = "middle" action="mailto:someone@example.com" method="post" enctype="text/plain"><br>
-        Your email:<br>
-        <input type="text" name="mail" size="40" placeholder="johnsmith@email.com"><br>
-        Message:<br>
-        <input type="text" name="message" size="40" placeholder="I would like to talk to you about..."><br><br>
-      </form>
-      <button id = "content_btn">Submit!</button>
-    </div>
+  
+      <div id="col content" class="col content">
+        <div id="box">
+            <h2>Nice title</h2>
+            <p>
+                Regularly evaluates our talent to ensure quality and other phrases here. 
+                More text can be added if you have more important things to say. 
+            </p>
+        </div>
+        <div id="box">
+            <h2>Nice title</h2>
+            <p>
+                Regularly evaluates our talent to ensure quality and other phrases here. 
+                More text can be added if you have more important things to say. 
+            </p>
+        </div>
+        <div id="box">
+            <h2>Nice title</h2>
+            <p>
+                Regularly evaluates our talent to ensure quality and other phrases here. 
+                More text can be added if you have more important things to say. 
+            </p>
+        </div>
+      </div>
 
   </main>
+
 </body>
 </html>
