--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
   <div id="menu_sidepanel" class="sidepanel">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>
     <div style="margin-left: 20%;">
-        <a href="/index.html">CV</a>       
+        <a href="/index.html">Home</a>       
         <a href="/cv.html">CV</a>
-        <a href="/cases.html">Cases</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/projects.html">Cases</a>
+        <!-- <a href="/contact.html">Contact</a> -->
     </div>
   </div>
 
 
   <main>
     <div id="header">
-      <h1">Hello World</h1>
+      <h1">Hello World!</h1>
     </div>
 
     <div id="col content" class="col content">
-      <p>I'm hosted with  Pages. Here is a <a href="https://google.com">link</a></p>
+      <p>This is my small website. Not a lot of stuff here yet, but feel free to check out <a href="/cv.html">my CV</a>. </p>
       <button id = "content_btn">Click here!</button>
     </div>
 
