--- a/projects.html
+++ b/projects.html
@@ -26,10 +26,10 @@
   <div id="menu_sidepanel" class="sidepanel">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>
     <div style="margin-left: 20%;">
-        <a href="/index.html">CV</a>       
+        <a href="/index.html">Home</a>       
         <a href="/cv.html">CV</a>
-        <a href="/cases.html">Cases</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/projects.html">Projects</a>
+        <!-- <a href="/contact.html">Contact</a> -->
     </div>
   </div>
 
@@ -37,29 +37,22 @@
 
   <main>
     <div id="header">
-        <h1">Cases</h1>
+        <h1">Projects that I have done</h1>
     </div>
   
       <div id="col content" class="col content">
         <div id="box">
-            <h2>Nice title</h2>
+            <h2>How news content influences audience engagement on social media</h2>
             <p>
-                Regularly evaluates our talent to ensure quality and other phrases here. 
-                More text can be added if you have more important things to say. 
+                Based on a collaboration with Ekstra Bladet, my master thesis used a range of NLP-models on several years of Facebook data. 
+                The thesis won the award for best master's thesis 2022/2023 at Institute of Sociology. Check it out <a href="files/thesis.pdf" style="color:rgb(29, 31, 35);">here.</a>
             </p>
         </div>
         <div id="box">
-            <h2>Nice title</h2>
+            <h2>AI and NLP in Customer Service</h2>
             <p>
-                Regularly evaluates our talent to ensure quality and other phrases here. 
-                More text can be added if you have more important things to say. 
-            </p>
-        </div>
-        <div id="box">
-            <h2>Nice title</h2>
-            <p>
-                Regularly evaluates our talent to ensure quality and other phrases here. 
-                More text can be added if you have more important things to say. 
+                I have worked a lot with using NLP and AI within customer service department in different private companies. 
+                Check a brief description of some of the work that I have been a part of <a href="https://amsterdamdatacollective.com/insights/deconstructing-conversational-ai-and-its-impact-on-customer-service/" style="color:rgb(29, 31, 35);">here.</a> 
             </p>
         </div>
       </div>
