removed button on frontpage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div id="col content" class="col content">
       <p>This is my small website. Not a lot of stuff here yet, but feel free to check out <a href="/cv.html">my CV</a>. </p>
-      <button id = "content_btn">Click here!</button>
+      <!-- <button id = "content_btn">Click here!</button> -->
     </div>
 
   </main>
