added streamlit iframe

--- a/cv.html
+++ b/cv.html
@@ -41,6 +41,17 @@
     </div>
 
     <div id="col content" class="col content">
+      <div class="streamlit_wrapper">
+        <p>Don't case to read it all? You can also chat with the content here:</p>
+        <div class="hidefooter"></div>
+        <iframe
+          src="https://madslangcv.streamlit.app//?embed=true&embed_options=dark_theme"
+          height="450"
+          width="600"
+          style="border:none"
+        ></iframe>
+      </div>
+
       <ul id="cv_list">
         <li>Experienced in developing and implementing NLP/LLM/AI
           solutions</li>
